[package]
name = "adbutils"
version = "0.1.0"
authors = ["Sato <ysudqfs@163.com>"]
description = "pure rust adb library for google adb service.."
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
log = "0.4"
path-absolutize = "3.0.14"
